--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,14 +3,15 @@
   <div class="row">
     <div class="col-md-12">
       <br><br>
-      <form enctype="multipart/form-data" method="POST" action="/save">
+      <form enctype="multipart/form-data" method="POST" action="/update/<%= result.id %>">
         <div class="form-group">
           <label for="exampleInputEmail1">Judul</label>
-          <input type="text" name="judul" class="form-control" placeholder="Enter Judul">
+          <input type="text" name="judul" class="form-control" placeholder="Enter Judul"
+          value="<%= result.judul %>">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Deskripsi</label>
-          <textarea name="deskripsi" class="form-control"></textarea>
+          <textarea name="deskripsi" class="form-control"><%= result.deskripsi %></textarea>
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">Gambar</label>
